{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 225,
  "lineage": "d8d1a292-b7b1-2011-61c3-b8bd99a209b1",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].default",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:757244967855:loadbalancer/app/alb-cloud-1/91700d1502287f4e",
            "arn_suffix": "app/alb-cloud-1/91700d1502287f4e",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-cloud-1-252126303.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:757244967855:loadbalancer/app/alb-cloud-1/91700d1502287f4e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-cloud-1",
            "preserve_host_header": false,
            "security_groups": [
              "sg-058bd8725b44aa8c3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0479ab04a04d725e5"
              },
              {
                "subnet_id": "subnet-0e7c1e84d02b18fd4"
              }
            ],
            "subnets": [
              "subnet-0479ab04a04d725e5",
              "subnet-0e7c1e84d02b18fd4"
            ],
            "tags": {
              "DeployedBy": "Terraform",
              "Origin": "cloud-1",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "DeployedBy": "Terraform",
              "Origin": "cloud-1",
              "terraform-aws-modules": "alb"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-0d8cc78a8cfc3e195",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].default",
      "instances": [
        {
          "index_key": "wordpress",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:757244967855:listener/app/alb-cloud-1/91700d1502287f4e/2873469a46e6b11f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:757244967855:targetgroup/tf-20241213150040915100000005/e08b001178e721c6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:757244967855:listener/app/alb-cloud-1/91700d1502287f4e/2873469a46e6b11f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:757244967855:loadbalancer/app/alb-cloud-1/91700d1502287f4e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "DeployedBy": "Terraform",
              "Origin": "cloud-1",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "DeployedBy": "Terraform",
              "Origin": "cloud-1",
              "terraform-aws-modules": "alb"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].default",
      "instances": [
        {
          "index_key": "wp_asg",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:757244967855:targetgroup/tf-20241213150040915100000005/e08b001178e721c6",
            "arn_suffix": "targetgroup/tf-20241213150040915100000005/e08b001178e721c6",
            "deregistration_delay": "5",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:757244967855:targetgroup/tf-20241213150040915100000005/e08b001178e721c6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "true",
            "name": "tf-20241213150040915100000005",
            "name_prefix": "tf-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "DeployedBy": "Terraform",
              "Origin": "cloud-1",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "DeployedBy": "Terraform",
              "Origin": "cloud-1",
              "terraform-aws-modules": "alb"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d8cc78a8cfc3e195"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].default",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:757244967855:security-group/sg-058bd8725b44aa8c3",
            "description": "Security group for alb-cloud-1 application load balancer",
            "egress": [],
            "id": "sg-058bd8725b44aa8c3",
            "ingress": [],
            "name": "alb-cloud-1-20241213150040927200000006",
            "name_prefix": "alb-cloud-1-",
            "owner_id": "757244967855",
            "revoke_rules_on_delete": false,
            "tags": {
              "DeployedBy": "Terraform",
              "Origin": "cloud-1",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "DeployedBy": "Terraform",
              "Origin": "cloud-1",
              "terraform-aws-modules": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8cc78a8cfc3e195"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].default",
      "instances": [
        {
          "index_key": "all",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:757244967855:security-group-rule/sgr-034452d52d2614a6b",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-034452d52d2614a6b",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-058bd8725b44aa8c3",
            "security_group_rule_id": "sgr-034452d52d2614a6b",
            "tags": {
              "DeployedBy": "Terraform",
              "Origin": "cloud-1",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "DeployedBy": "Terraform",
              "Origin": "cloud-1",
              "terraform-aws-modules": "alb"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].default",
      "instances": [
        {
          "index_key": "all_http",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:757244967855:security-group-rule/sgr-03b6f36b81f25e0ca",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTP web traffic",
            "from_port": 80,
            "id": "sgr-03b6f36b81f25e0ca",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-058bd8725b44aa8c3",
            "security_group_rule_id": "sgr-03b6f36b81f25e0ca",
            "tags": {
              "DeployedBy": "Terraform",
              "Origin": "cloud-1",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "DeployedBy": "Terraform",
              "Origin": "cloud-1",
              "terraform-aws-modules": "alb"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aurora",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].default",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:757244967855:security-group/sg-035183ad82011183b",
            "description": "Control traffic to/from RDS Aurora aurora-cluster-cloud-1-mysqlv2",
            "egress": [],
            "id": "sg-035183ad82011183b",
            "ingress": [],
            "name": "aurora-cluster-cloud-1-mysqlv2-20241213150041164900000007",
            "name_prefix": "aurora-cluster-cloud-1-mysqlv2-",
            "owner_id": "757244967855",
            "revoke_rules_on_delete": false,
            "tags": {
              "DeployedBy": "Terraform",
              "Name": "aurora-cluster-cloud-1-mysqlv2",
              "Origin": "cloud-1"
            },
            "tags_all": {
              "DeployedBy": "Terraform",
              "Name": "aurora-cluster-cloud-1-mysqlv2",
              "Origin": "cloud-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8cc78a8cfc3e195"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aurora",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].default",
      "instances": [
        {
          "index_key": "allow_asg",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow ASG to access the Aurora Cluster",
            "from_port": 3306,
            "id": "sgrule-1193150161",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-035183ad82011183b",
            "security_group_rule_id": "sgr-031118b52e0b1b015",
            "self": false,
            "source_security_group_id": "sg-0fbbd9af2b0906c3c",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aurora.aws_security_group.this",
            "module.autoscaling_sg.aws_security_group.this",
            "module.autoscaling_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.autoscaling_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].default",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:757244967855:security-group/sg-0fbbd9af2b0906c3c",
            "description": "Autoscaling group security group",
            "egress": [],
            "id": "sg-0fbbd9af2b0906c3c",
            "ingress": [],
            "name": "asg-sg-cloud-1-20241213150040874700000004",
            "name_prefix": "asg-sg-cloud-1-",
            "owner_id": "757244967855",
            "revoke_rules_on_delete": false,
            "tags": {
              "DeployedBy": "Terraform",
              "Name": "asg-sg-cloud-1",
              "Origin": "cloud-1"
            },
            "tags_all": {
              "DeployedBy": "Terraform",
              "Name": "asg-sg-cloud-1",
              "Origin": "cloud-1"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0d8cc78a8cfc3e195"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.autoscaling_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].default",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-3301442644",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0fbbd9af2b0906c3c",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.autoscaling_sg.aws_security_group.this",
            "module.autoscaling_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.autoscaling_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].default",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow access for HTTP connection",
            "from_port": 80,
            "id": "sgrule-2327057698",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fbbd9af2b0906c3c",
            "security_group_rule_id": "sgr-0fdd389f65f76c2da",
            "self": false,
            "source_security_group_id": "sg-058bd8725b44aa8c3",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.autoscaling_sg.aws_security_group.this",
            "module.autoscaling_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.efs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].default",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:757244967855:security-group/sg-0c7ecbe61c824e375",
            "description": "EFS security group",
            "egress": [],
            "id": "sg-0c7ecbe61c824e375",
            "ingress": [],
            "name": "efs-cloud-1",
            "name_prefix": "",
            "owner_id": "757244967855",
            "revoke_rules_on_delete": true,
            "tags": {
              "DeployedBy": "Terraform",
              "Origin": "cloud-1"
            },
            "tags_all": {
              "DeployedBy": "Terraform",
              "Origin": "cloud-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8cc78a8cfc3e195"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.efs",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].default",
      "instances": [
        {
          "index_key": "vpc",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow access from ASG",
            "from_port": 2049,
            "id": "sgrule-1268890390",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c7ecbe61c824e375",
            "security_group_rule_id": "sgr-07bc7a8d3e34c878c",
            "self": false,
            "source_security_group_id": "sg-0fbbd9af2b0906c3c",
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.autoscaling_sg.aws_security_group.this",
            "module.autoscaling_sg.aws_security_group.this_name_prefix",
            "module.efs.aws_security_group.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.elasticache",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].default",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:757244967855:security-group/sg-0ab8da5868e69cb5b",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ab8da5868e69cb5b",
            "ingress": [],
            "name": "memcache-cloud-1-20241213150041181800000008",
            "name_prefix": "memcache-cloud-1-",
            "owner_id": "757244967855",
            "revoke_rules_on_delete": false,
            "tags": {
              "terraform-aws-modules": "elasticache"
            },
            "tags_all": {
              "terraform-aws-modules": "elasticache"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8cc78a8cfc3e195"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.elasticache",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].default",
      "instances": [
        {
          "index_key": "ingress_vpc",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:757244967855:security-group-rule/sgr-071767ff061ed396f",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "ASG traffic",
            "from_port": 11211,
            "id": "sgr-071767ff061ed396f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0fbbd9af2b0906c3c",
            "security_group_id": "sg-0ab8da5868e69cb5b",
            "security_group_rule_id": "sgr-071767ff061ed396f",
            "tags": {
              "terraform-aws-modules": "elasticache"
            },
            "tags_all": {
              "terraform-aws-modules": "elasticache"
            },
            "to_port": 11211
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.autoscaling_sg.aws_security_group.this",
            "module.autoscaling_sg.aws_security_group.this_name_prefix",
            "module.elasticache.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].default",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:757244967855:network-acl/acl-0c639bd26e1aae8fd",
            "default_network_acl_id": "acl-0c639bd26e1aae8fd",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0c639bd26e1aae8fd",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "757244967855",
            "subnet_ids": [
              "subnet-0479ab04a04d725e5",
              "subnet-084b07dd076e0c53c",
              "subnet-09c33d3a7d2bd7f1a",
              "subnet-0d32926d1b98ae4fd",
              "subnet-0e7c1e84d02b18fd4",
              "subnet-0e9a62cdc91392480"
            ],
            "tags": {
              "DeployedBy": "Terraform",
              "Name": "vpc-cloud-1-default",
              "Origin": "cloud-1"
            },
            "tags_all": {
              "DeployedBy": "Terraform",
              "Name": "vpc-cloud-1-default",
              "Origin": "cloud-1"
            },
            "vpc_id": "vpc-0d8cc78a8cfc3e195"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].default",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:757244967855:route-table/rtb-0564e289971250166",
            "default_route_table_id": "rtb-0564e289971250166",
            "id": "rtb-0564e289971250166",
            "owner_id": "757244967855",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "DeployedBy": "Terraform",
              "Name": "vpc-cloud-1-default",
              "Origin": "cloud-1"
            },
            "tags_all": {
              "DeployedBy": "Terraform",
              "Name": "vpc-cloud-1-default",
              "Origin": "cloud-1"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0d8cc78a8cfc3e195"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].default",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:757244967855:security-group/sg-064134ce354e6c03a",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-064134ce354e6c03a",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "757244967855",
            "revoke_rules_on_delete": false,
            "tags": {
              "DeployedBy": "Terraform",
              "Name": "vpc-cloud-1-default",
              "Origin": "cloud-1"
            },
            "tags_all": {
              "DeployedBy": "Terraform",
              "Name": "vpc-cloud-1-default",
              "Origin": "cloud-1"
            },
            "vpc_id": "vpc-0d8cc78a8cfc3e195"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].default",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e71ed39a83150edd",
            "arn": "arn:aws:ec2:eu-west-3:757244967855:elastic-ip/eipalloc-0e71ed39a83150edd",
            "domain": "vpc",
            "id": "eipalloc-0e71ed39a83150edd",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-52-47-141-158.eu-west-3.compute.amazonaws.com",
            "public_ip": "52.47.141.158",
            "public_ipv4_pool": "amazon",
            "tags": {
              "DeployedBy": "Terraform",
              "Name": "vpc-cloud-1-eu-west-3a",
              "Origin": "cloud-1"
            },
            "tags_all": {
              "DeployedBy": "Terraform",
              "Name": "vpc-cloud-1-eu-west-3a",
              "Origin": "cloud-1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0473fea919a567bda",
            "arn": "arn:aws:ec2:eu-west-3:757244967855:elastic-ip/eipalloc-0473fea919a567bda",
            "domain": "vpc",
            "id": "eipalloc-0473fea919a567bda",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-13-39-169-83.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.39.169.83",
            "public_ipv4_pool": "amazon",
            "tags": {
              "DeployedBy": "Terraform",
              "Name": "vpc-cloud-1-eu-west-3b",
              "Origin": "cloud-1"
            },
            "tags_all": {
              "DeployedBy": "Terraform",
              "Name": "vpc-cloud-1-eu-west-3b",
              "Origin": "cloud-1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].default",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:757244967855:internet-gateway/igw-04ee109f68604f3ad",
            "id": "igw-04ee109f68604f3ad",
            "owner_id": "757244967855",
            "tags": {
              "DeployedBy": "Terraform",
              "Name": "vpc-cloud-1",
              "Origin": "cloud-1"
            },
            "tags_all": {
              "DeployedBy": "Terraform",
              "Name": "vpc-cloud-1",
              "Origin": "cloud-1"
            },
            "vpc_id": "vpc-0d8cc78a8cfc3e195"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].default",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e71ed39a83150edd",
            "association_id": "eipassoc-0e3542992b122860d",
            "connectivity_type": "public",
            "id": "nat-01265ec3259b82e53",
            "network_interface_id": "eni-0d6b44ac777b89d74",
            "private_ip": "10.0.4.232",
            "public_ip": "52.47.141.158",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e7c1e84d02b18fd4",
            "tags": {
              "DeployedBy": "Terraform",
              "Name": "vpc-cloud-1-eu-west-3a",
              "Origin": "cloud-1"
            },
            "tags_all": {
              "DeployedBy": "Terraform",
              "Name": "vpc-cloud-1-eu-west-3a",
              "Origin": "cloud-1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0473fea919a567bda",
            "association_id": "eipassoc-0df59760fa2524b6d",
            "connectivity_type": "public",
            "id": "nat-0f12c78e03ba0ffe6",
            "network_interface_id": "eni-084c47d48456b2aa7",
            "private_ip": "10.0.5.17",
            "public_ip": "13.39.169.83",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0479ab04a04d725e5",
            "tags": {
              "DeployedBy": "Terraform",
              "Name": "vpc-cloud-1-eu-west-3b",
              "Origin": "cloud-1"
            },
            "tags_all": {
              "DeployedBy": "Terraform",
              "Name": "vpc-cloud-1-eu-west-3b",
              "Origin": "cloud-1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].default",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b652f7ffc951b88a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01265ec3259b82e53",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b652f7ffc951b88a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-010acfd83be2838661080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f12c78e03ba0ffe6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-010acfd83be283866",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].default",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04ee109f68604f3ad",
            "id": "r-rtb-01c6e40e9d63b937f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01c6e40e9d63b937f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].default",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:757244967855:route-table/rtb-0b652f7ffc951b88a",
            "id": "rtb-0b652f7ffc951b88a",
            "owner_id": "757244967855",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "DeployedBy": "Terraform",
              "Name": "vpc-cloud-1-private-eu-west-3a",
              "Origin": "cloud-1"
            },
            "tags_all": {
              "DeployedBy": "Terraform",
              "Name": "vpc-cloud-1-private-eu-west-3a",
              "Origin": "cloud-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8cc78a8cfc3e195"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:757244967855:route-table/rtb-010acfd83be283866",
            "id": "rtb-010acfd83be283866",
            "owner_id": "757244967855",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "DeployedBy": "Terraform",
              "Name": "vpc-cloud-1-private-eu-west-3b",
              "Origin": "cloud-1"
            },
            "tags_all": {
              "DeployedBy": "Terraform",
              "Name": "vpc-cloud-1-private-eu-west-3b",
              "Origin": "cloud-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8cc78a8cfc3e195"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].default",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:757244967855:route-table/rtb-01c6e40e9d63b937f",
            "id": "rtb-01c6e40e9d63b937f",
            "owner_id": "757244967855",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "DeployedBy": "Terraform",
              "Name": "vpc-cloud-1-public",
              "Origin": "cloud-1"
            },
            "tags_all": {
              "DeployedBy": "Terraform",
              "Name": "vpc-cloud-1-public",
              "Origin": "cloud-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8cc78a8cfc3e195"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].default",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ae974ad6ed3e791",
            "route_table_id": "rtb-0b652f7ffc951b88a",
            "subnet_id": "subnet-084b07dd076e0c53c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0627405bdf0a11315",
            "route_table_id": "rtb-010acfd83be283866",
            "subnet_id": "subnet-0d32926d1b98ae4fd"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].default",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06441afea4e5a6649",
            "route_table_id": "rtb-0b652f7ffc951b88a",
            "subnet_id": "subnet-0e9a62cdc91392480"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06501ec4144f9f1de",
            "route_table_id": "rtb-010acfd83be283866",
            "subnet_id": "subnet-09c33d3a7d2bd7f1a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].default",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9130fc819b01b0a",
            "route_table_id": "rtb-01c6e40e9d63b937f",
            "subnet_id": "subnet-0e7c1e84d02b18fd4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b1cabd546feed8b",
            "route_table_id": "rtb-01c6e40e9d63b937f",
            "subnet_id": "subnet-0479ab04a04d725e5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].default",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:757244967855:subnet/subnet-084b07dd076e0c53c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084b07dd076e0c53c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "757244967855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "DeployedBy": "Terraform",
              "Name": "cloud-1_database_eu-west-3a",
              "Origin": "cloud-1"
            },
            "tags_all": {
              "DeployedBy": "Terraform",
              "Name": "cloud-1_database_eu-west-3a",
              "Origin": "cloud-1"
            },
            "vpc_id": "vpc-0d8cc78a8cfc3e195"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:757244967855:subnet/subnet-0d32926d1b98ae4fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d32926d1b98ae4fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "757244967855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "DeployedBy": "Terraform",
              "Name": "cloud-1_database_eu-west-3b",
              "Origin": "cloud-1"
            },
            "tags_all": {
              "DeployedBy": "Terraform",
              "Name": "cloud-1_database_eu-west-3b",
              "Origin": "cloud-1"
            },
            "vpc_id": "vpc-0d8cc78a8cfc3e195"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].default",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:757244967855:subnet/subnet-0e9a62cdc91392480",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9a62cdc91392480",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "757244967855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "DeployedBy": "Terraform",
              "Name": "cloud-1_private_eu-west-3a",
              "Origin": "cloud-1"
            },
            "tags_all": {
              "DeployedBy": "Terraform",
              "Name": "cloud-1_private_eu-west-3a",
              "Origin": "cloud-1"
            },
            "vpc_id": "vpc-0d8cc78a8cfc3e195"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:757244967855:subnet/subnet-09c33d3a7d2bd7f1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c33d3a7d2bd7f1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "757244967855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "DeployedBy": "Terraform",
              "Name": "cloud-1_private_eu-west-3b",
              "Origin": "cloud-1"
            },
            "tags_all": {
              "DeployedBy": "Terraform",
              "Name": "cloud-1_private_eu-west-3b",
              "Origin": "cloud-1"
            },
            "vpc_id": "vpc-0d8cc78a8cfc3e195"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].default",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:757244967855:subnet/subnet-0e7c1e84d02b18fd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7c1e84d02b18fd4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "757244967855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "DeployedBy": "Terraform",
              "Name": "cloud-1_public_eu-west-3a",
              "Origin": "cloud-1"
            },
            "tags_all": {
              "DeployedBy": "Terraform",
              "Name": "cloud-1_public_eu-west-3a",
              "Origin": "cloud-1"
            },
            "vpc_id": "vpc-0d8cc78a8cfc3e195"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:757244967855:subnet/subnet-0479ab04a04d725e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0479ab04a04d725e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "757244967855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "DeployedBy": "Terraform",
              "Name": "cloud-1_public_eu-west-3b",
              "Origin": "cloud-1"
            },
            "tags_all": {
              "DeployedBy": "Terraform",
              "Name": "cloud-1_public_eu-west-3b",
              "Origin": "cloud-1"
            },
            "vpc_id": "vpc-0d8cc78a8cfc3e195"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].default",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:757244967855:vpc/vpc-0d8cc78a8cfc3e195",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c639bd26e1aae8fd",
            "default_route_table_id": "rtb-0564e289971250166",
            "default_security_group_id": "sg-064134ce354e6c03a",
            "dhcp_options_id": "dopt-0a4cf4d48a9f4966d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d8cc78a8cfc3e195",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0564e289971250166",
            "owner_id": "757244967855",
            "tags": {
              "DeployedBy": "Terraform",
              "Name": "vpc-cloud-1",
              "Origin": "cloud-1"
            },
            "tags_all": {
              "DeployedBy": "Terraform",
              "Name": "vpc-cloud-1",
              "Origin": "cloud-1"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}